# Source-of-truth

./: .gitignore  Neo4j Create Project  README.md  start_neo.zsh  tst_cmd.sh
src_of_truth/: README.md  create_original_data.sh  create_test_data.sh  load_excel.sh  main.py  pyproject.toml  run_main.zsh
src_of_truth/cypher/: create_links_project.cypher  create_person.cypher  create_project.cypher  create_small.cypher  create_small_links.cypher  delete_all.cypher  excel_data.cypher  load_csv.cypher  notes.cypher  snip_create_and_link.cypher
src_of_truth/src_of_truth/: commands.py  excel_utils.py  neo4j.py  neo4j_connection.py
